--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,35 @@
 .App {
   text-align: center;
+  margin: 30px;
 }
 
+
+.main_menu_container {
+  width: 100%;
+  height: 100%;
+  margin: 20px auto;
+  padding: 10px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.crypto_container {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px auto;
+  border: 1px solid black;
+}
+
+.crypto_name {
+  display: flex;
+}
+.crypto_price {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+}
