--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,15 @@
   align-items: center;
   margin: 10px auto;
   border: 1px solid black;
+  background-color: rgb(241, 235, 227);
 }
 
 .crypto_name {
   display: flex;
 }
+
 .crypto_price {
   width: 20%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
