--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,11 @@
   align-items: center;
   margin: 10px auto;
   border: 1px solid black;
-  background-color: rgb(241, 235, 227);
+  background-color: rgb(239, 236, 233);
 }
 
 .crypto_name {
+  margin-left: 5px;
   display: flex;
 }
 
