--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -24,6 +24,14 @@
   display: -ms-flexbox;
   display: flex;
 }
+.accordion_container .crypto_container .crypto_name .fav_icon {
+  z-index: 3;
+  width: 50px;
+  color: red;
+}
+.accordion_container .crypto_container .crypto_name .fav_icon:hover {
+  color: rgb(122, 5, 5);
+}
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
   display: -webkit-box;
