--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -1,6 +1,6 @@
 .accordion_container {
   width: 100%;
-  
+
   .crypto_container {
     cursor: pointer;
     width: 100%;
@@ -15,6 +15,15 @@
     .crypto_name {
       margin-left: 5px;
       display: flex;
+
+      .fav_icon {
+        z-index: 3;
+        width: 50px;
+        color: red;
+      }
+      .fav_icon:hover {
+        color: rgb(122, 5, 5);
+      }
     }
     .crypto_price {
       width: 20%;
