--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -23,14 +23,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .accordion_container .crypto_container .crypto_name .fav_icon {
   z-index: 3;
-  width: 50px;
+  font-size: 2rem;
   color: red;
-}
-.accordion_container .crypto_container .crypto_name .fav_icon:hover {
-  color: rgb(122, 5, 5);
 }
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
