--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -23,9 +23,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -34,6 +33,9 @@
   z-index: 3;
   font-size: 2rem;
   color: red;
+}
+.accordion_container .crypto_container .crypto_name .active {
+  display: none;
 }
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
