--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -1,5 +1,20 @@
 .accordion_container {
   width: 100%;
+  .fav_container {
+
+    .active {
+      cursor: pointer;
+      z-index: 3;
+      font-size: 2rem;
+      color: red;
+    }
+    .inactive {
+      cursor: pointer;
+      z-index: 3;
+      font-size: 2rem;
+      color: red;
+    } 
+  }
 
   .crypto_container {
     cursor: pointer;
@@ -18,14 +33,6 @@
       justify-content: space-around;
       align-items: center;
 
-      .fav_icon {
-        z-index: 3;
-        font-size: 2rem;
-        color: red;
-      }
-      .active {
-        display: none;
-      }      
     }
     .crypto_price {
       width: 20%;
