--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -1,18 +1,6 @@
 .accordion_container {
   width: 100%;
 }
-.accordion_container .fav_container .active {
-  cursor: pointer;
-  z-index: 3;
-  font-size: 2rem;
-  color: red;
-}
-.accordion_container .fav_container .inactive {
-  cursor: pointer;
-  z-index: 3;
-  font-size: 2rem;
-  color: red;
-}
 .accordion_container .crypto_container {
   cursor: pointer;
   width: 100%;
@@ -35,11 +23,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.accordion_container .crypto_container .crypto_name .fav_icon {
+  z-index: 3;
+  font-size: 2rem;
+  color: red;
 }
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
