--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -1,10 +1,42 @@
-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  opacity: 0.6;
-  -webkit-filter: grayscale(50%);
-          filter: grayscale(50%);
+.login_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 400px;
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: antiquewhite;
+}
+.login_container h2 {
+  text-align: center;
+}
+.login_container form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.login_container form h3 {
+  margin: 5px 0 10px 0;
+}
+.login_container form input {
+  border: none;
+  font-size: 1.5rem;
 }
