--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -24,6 +24,7 @@
 .login_container h2 {
   text-align: center;
   font-size: 3rem;
+  margin: 10px;
 }
 .login_container form {
   display: -webkit-box;
@@ -33,12 +34,21 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-.login_container form h3 {
-  margin: 5px 0 10px 0;
-  font-size: 2.2rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+  padding: 10px;
 }
 .login_container form input {
   border: none;
   font-size: 1.8rem;
+  padding: 2px;
+  margin: 15px;
+}
+.login_container form input:focus {
+  outline-color: rgba(0, 0, 0, 0.619);
 }
