--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -23,6 +23,7 @@
 }
 .login_container h2 {
   text-align: center;
+  text-transform: uppercase;
   font-size: 3rem;
   margin: 10px;
 }
@@ -46,8 +47,10 @@
 .login_container form input {
   border: none;
   font-size: 1.8rem;
-  padding: 2px;
+  padding: 2px 4px 2px 4px;
   margin: 15px;
+  height: 35px;
+  border-radius: 5px;
 }
 .login_container form input:focus {
   outline-color: rgba(0, 0, 0, 0.619);
