--- a/src/Components/LogIn/index.scss
+++ b/src/Components/LogIn/index.scss
@@ -13,6 +13,7 @@
 
   h2 {
     text-align: center;
+    text-transform: uppercase;
     font-size: 3rem;
     margin: 10px;
   }
@@ -24,16 +25,13 @@
     margin-top: 20px;
     padding: 10px;
 
-    // h3 {
-    //   margin: 5px 0 10px 0;
-    //   font-size: 2.2rem;
-    // }
-
     input {
       border: none;
       font-size: 1.8rem;
-      padding: 2px;
+      padding: 2px 4px 2px 4px;
       margin: 15px;
+      height: 35px;
+      border-radius: 5px;
     }
     input:focus {
       outline-color: rgba(0, 0, 0, 0.619);
