--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -44,14 +44,32 @@
   margin-top: 20px;
   padding: 10px;
 }
-.login_container form input {
-  border: none;
-  font-size: 1.8rem;
-  padding: 2px 4px 2px 4px;
+.login_container form .login_input_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  background-color: white;
+  padding: 5px;
+  height: 40px;
   margin: 15px;
-  height: 35px;
   border-radius: 5px;
 }
-.login_container form input:focus {
-  outline-color: rgba(0, 0, 0, 0.619);
+.login_container form .login_input_container .login_icon {
+  display: block;
+  height: 20px;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+.login_container form .login_input_container input {
+  border: none;
+  font-size: 1.8rem;
+  margin-left: 5px;
+  padding: 2px 4px 2px 4px;
+  height: 100%;
+}
+.login_container form .login_input_container input:focus {
+  outline: none;
 }
