--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -13,13 +13,15 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: antiquewhite;
+  -webkit-box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
 }
 .login_container h2 {
   text-align: center;
@@ -41,8 +43,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 20px;
-  padding: 10px;
 }
 .login_container form .login_input_container {
   display: -webkit-box;
@@ -72,4 +72,21 @@
 }
 .login_container form .login_input_container input:focus {
   outline: none;
+}
+.login_container form .login_btn {
+  border: none;
+  padding: 5px;
+  width: 200px;
+  font-size: 2rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin: 10px;
+}
+.login_container .signup_text {
+  display: inline-block;
+  font-size: 1.8rem;
+}
+.login_container .signup_text .signup_link {
+  text-decoration: none;
+  color: rgb(66, 215, 20);
 }
