--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -3,8 +3,8 @@
 }
 .accordion_container .crypto_container {
   cursor: pointer;
-  width: 100%;
-  height: 10%;
+  width: 60%;
+  height: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,7 +14,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 10px auto;
+  margin: 20px auto;
   border: 1px solid black;
   background-color: rgb(239, 236, 233);
 }
@@ -29,11 +29,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-.accordion_container .crypto_container .crypto_name .fav_icon {
-  z-index: 3;
-  font-size: 2rem;
-  color: red;
 }
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
@@ -52,12 +47,34 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-.accordion_container .data_container .datas {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.accordion_container .data_container .data_inner_container {
+  width: 60%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.accordion_container .data_container .data_inner_container .datas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
