--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -3,12 +3,12 @@
 
   .crypto_container {
     cursor: pointer;
-    width: 100%;
-    height: 10%;
+    width: 60%;
+    height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px auto;
+    margin: 20px auto;
     border: 1px solid black;
     background-color: rgb(239, 236, 233);
 
@@ -17,13 +17,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-      .fav_icon {
-        z-index: 3;
-        font-size: 2rem;
-        color: red;
-      }
-
     }
     .crypto_price {
       width: 20%;
@@ -35,10 +28,22 @@
   .data_container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
-    .datas {
-      display: flex;
-      justify-content: space-between;
+    .data_inner_container {
+      width: 60%;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      align-items: center;
+
+      .datas {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
