--- a/src/Components/GlobalData/css/index.css
+++ b/src/Components/GlobalData/css/index.css
@@ -1,3 +1,11 @@
+h2 {
+  font-size: 3.5rem;
+  text-align: center;
+  margin: 15px auto;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+}
+
 .globaldata_container {
   width: 100%;
   height: 90vh;
@@ -5,9 +13,9 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
   justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   margin: 20px auto;
 }
 .globaldata_container .gdatas {
