--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  background-color: #071425;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
