--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -19,9 +19,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: antiquewhite;
-  -webkit-box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
-          box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
+  background-color: #E8EEF2;
+  -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+          box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .login_container h2 {
   text-align: center;
@@ -77,6 +77,7 @@
   border: none;
   padding: 5px;
   width: 200px;
+  background-color: #FEC601;
   font-size: 2rem;
   text-transform: uppercase;
   cursor: pointer;
@@ -88,5 +89,10 @@
 }
 .login_container .signup_text .signup_link {
   text-decoration: none;
-  color: rgb(66, 215, 20);
+  color: #0a1f39;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+.login_container .signup_text .signup_link:hover {
+  color: #6C809A;
 }
