--- a/src/Components/LogIn/index.scss
+++ b/src/Components/LogIn/index.scss
@@ -52,13 +52,19 @@
 
     .login_btn {
       border: none;
+      border-radius: 4px;
       padding: 5px;
       width: 200px;
       background-color: #FEC601;
       font-size: 2rem;
+      font-weight: 600;
       text-transform: uppercase;
       cursor: pointer;
       margin: 10px;
+      transition: background-color 0.2s ease-in;
+    }
+    .login_btn:hover {
+      background-color: #f9d44b;
     }
   }
 
