--- a/src/Components/SignUp/css/index.css
+++ b/src/Components/SignUp/css/index.css
@@ -19,9 +19,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: antiquewhite;
-  -webkit-box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
-          box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
+  background-color: #E8EEF2;
+  -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+          box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .signup_container h2 {
   text-align: center;
@@ -74,10 +74,18 @@
 }
 .signup_container form .signup_btn {
   border: none;
+  border-radius: 4px;
   padding: 5px;
   width: 200px;
+  background-color: #FEC601;
   font-size: 2rem;
+  font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
   margin: 10px;
+  -webkit-transition: background-color 0.2s ease-in;
+  transition: background-color 0.2s ease-in;
+}
+.signup_container form .signup_btn:hover {
+  background-color: #f9d44b;
 }
