--- a/src/Components/SignUp/index.scss
+++ b/src/Components/SignUp/index.scss
@@ -9,8 +9,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: antiquewhite;
-  box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
+  background-color: #E8EEF2;
+  box-shadow: 10px -2px 20px 2px #e8eef24c;
 
   h2 {
     text-align: center;
@@ -51,12 +51,19 @@
 
     .signup_btn {
       border: none;
+      border-radius: 4px;
       padding: 5px;
       width: 200px;
+      background-color: #FEC601;
       font-size: 2rem;
+      font-weight: 600;
       text-transform: uppercase;
       cursor: pointer;
       margin: 10px;
+      transition: background-color 0.2s ease-in;
+    }
+    .signup_btn:hover {
+      background-color: #f9d44b;
     }
   }
 
