--- a/src/Components/MenuNav/css/index.css
+++ b/src/Components/MenuNav/css/index.css
@@ -10,13 +10,24 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: black;
+  color: #E8EEF2;
 }
 .navbar .nav_link {
   text-decoration: none;
-  color: black;
-  margin: 10px;
-  font-size: 1.5rem;
+  color: #E8EEF2;
+  margin: 15px;
+  font-size: 2rem;
+  font-weight: 500;
   text-transform: uppercase;
+  -webkit-transition: text-shadow 0.2s ease-in;
+  transition: text-shadow 0.2s ease-in;
+}
+.navbar .nav_link:hover {
+  text-shadow: 1px 0px 1px white;
+}
+.navbar .nav_link:visited {
+  color: #E8EEF2;
 }
 
 .navbar:last-child {
