--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -15,8 +15,8 @@
       -ms-flex-align: center;
           align-items: center;
   margin: 20px auto;
-  border: 1px solid black;
-  background-color: rgb(239, 236, 233);
+  border-radius: 4px;
+  background-color: #E8EEF2;
 }
 .accordion_container .crypto_container .crypto_name {
   margin-left: 5px;
@@ -29,6 +29,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.accordion_container .crypto_container .crypto_name h2 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  margin-left: 10px;
+}
+.accordion_container .crypto_container .crypto_name p {
+  font-size: 1.5rem;
+  margin-left: 10px;
 }
 .accordion_container .crypto_container .crypto_price {
   width: 20%;
