--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -9,14 +9,24 @@
     justify-content: space-between;
     align-items: center;
     margin: 20px auto;
-    border: 1px solid black;
-    background-color: rgb(239, 236, 233);
+    border-radius: 4px;
+    background-color: #E8EEF2;
 
     .crypto_name {
       margin-left: 5px;
       display: flex;
       justify-content: center;
       align-items: center;
+
+      h2 {
+        font-size: 2.5rem;
+        text-transform: uppercase;
+        margin-left: 10px;
+      }
+      p {
+        font-size: 1.5rem;
+        margin-left: 10px;
+      }
     }
     .crypto_price {
       width: 20%;
