--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -32,6 +32,10 @@
       width: 20%;
       display: flex;
       justify-content: space-evenly;
+
+      p {
+        font-size: 2rem;
+      }
     }
   }
 
