--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -31,10 +31,12 @@
     .crypto_price {
       width: 20%;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
+      margin-right: 20px;
 
       p {
         font-size: 2rem;
+        font-weight: 500;
       }
     }
   }
