--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -44,12 +44,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-right: 20px;
 }
 .accordion_container .crypto_container .crypto_price p {
   font-size: 2rem;
+  font-weight: 500;
 }
 .accordion_container .data_container {
   display: -webkit-box;
