--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -68,11 +68,17 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 100px;
+  color: #E8EEF2;
 }
 .accordion_container .data_container .data_inner_container {
   width: 60%;
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
