--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -47,11 +47,15 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 100px;
+    color: #E8EEF2;
 
     .data_inner_container {
       width: 60%;
+      height: 100%;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
+      justify-content: center;
       align-items: center;
 
       .datas {
