--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -17,6 +17,8 @@
   margin: 20px auto;
   border-radius: 4px;
   background-color: #E8EEF2;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 .accordion_container .crypto_container .crypto_name {
   margin-left: 5px;
@@ -36,7 +38,7 @@
   margin-left: 10px;
 }
 .accordion_container .crypto_container .crypto_name p {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin-left: 10px;
 }
 .accordion_container .crypto_container .crypto_price {
@@ -52,6 +54,14 @@
 .accordion_container .crypto_container .crypto_price p {
   font-size: 2rem;
   font-weight: 500;
+}
+.accordion_container .crypto_container:hover {
+  background-color: #FEC601;
+  color: #151515;
+}
+.accordion_container .crypto_containe:active {
+  background-color: #FEC601;
+  color: #151515;
 }
 .accordion_container .data_container {
   display: -webkit-box;
@@ -97,4 +107,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.accordion_container .data_container .data_inner_container .datas h3 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.accordion_container .data_container .data_inner_container .datas p {
+  font-size: 1.5rem;
 }
