--- a/src/Components/GlobalData/css/index.css
+++ b/src/Components/GlobalData/css/index.css
@@ -4,6 +4,7 @@
   margin: 15px auto;
   text-transform: uppercase;
   letter-spacing: 1.2px;
+  color: #E8EEF2;
 }
 
 .globaldata_container {
@@ -17,11 +18,13 @@
       -ms-flex-align: baseline;
           align-items: baseline;
   margin: 20px auto;
+  color: black;
 }
 .globaldata_container .gdatas {
   width: 300px;
   height: 300px;
-  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #E8EEF2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,15 +38,16 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
-          box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+          box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .globaldata_container .gdatas h3 {
-  font-size: 2rem;
+  font-size: 2.3rem;
   text-align: center;
   word-wrap: break-word;
   margin: 10px auto;
 }
 .globaldata_container .gdatas p {
-  font-size: 1.8rem;
+  font-size: 1.9rem;
+  font-weight: 500;
 }
