--- a/src/Components/GlobalData/index.scss
+++ b/src/Components/GlobalData/index.scss
@@ -4,6 +4,7 @@
   margin: 15px auto;
   text-transform: uppercase;
   letter-spacing: 1.2px;
+  color: #E8EEF2;
 };
 .globaldata_container {
   width: 100%;
@@ -14,25 +15,28 @@
   justify-items: center;
   align-items: baseline;
   margin: 20px auto;
+  color: black;
 
   .gdatas {
     width: 300px;
     height: 300px;
-    border: 1px solid black;
+    border-radius: 4px;
+    background-color: #E8EEF2;  
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
+    box-shadow: 10px -2px 20px 2px #e8eef24c;
 
     h3 {
-      font-size: 2rem;
+      font-size: 2.3rem;
       text-align: center;
       word-wrap: break-word;
       margin: 10px auto;
     }
     p {
-      font-size: 1.8rem;
+      font-size: 1.9rem;
+      font-weight: 500;
     }
   }
 }
