--- a/src/Components/MenuNav/css/index.css
+++ b/src/Components/MenuNav/css/index.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  height: 40px;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,7 +11,6 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: black;
-  color: #E8EEF2;
 }
 .navbar .nav_link {
   text-decoration: none;
@@ -20,14 +19,17 @@
   font-size: 2rem;
   font-weight: 500;
   text-transform: uppercase;
-  -webkit-transition: text-shadow 0.2s ease-in;
-  transition: text-shadow 0.2s ease-in;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
 }
 .navbar .nav_link:hover {
-  text-shadow: 1px 0px 1px white;
+  color: #FEC601;
+}
+.navbar .nav_link:active {
+  color: #FEC601;
 }
 .navbar .nav_link:visited {
-  color: #E8EEF2;
+  color: none;
 }
 
 .navbar:last-child {
