--- a/src/Components/MenuNav/index.scss
+++ b/src/Components/MenuNav/index.scss
@@ -1,11 +1,10 @@
 .navbar {
   width: 100%;
-  height: 40px;
+  height: 60px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   background-color: black;
-  color: #E8EEF2;
 
   .nav_link {
     text-decoration: none;
@@ -14,13 +13,17 @@
     font-size: 2rem;
     font-weight: 500;
     text-transform: uppercase;
-    transition: text-shadow 0.2s ease-in;
+    transition: color 0.2s ease-in;
   }
   .nav_link:hover {
-    text-shadow: 1px 0px 1px white;
+    color: #FEC601;
+    //text-shadow: 1px 0px 1px white;
+  }
+  .nav_link:active {
+    color: #FEC601;
   }
   .nav_link:visited {
-    color: #E8EEF2;
+    color: none;
   }
 }
 .navbar:last-child {
