--- a/src/Components/SignUp/index.scss
+++ b/src/Components/SignUp/index.scss
@@ -31,6 +31,7 @@
       height: 40px;
       margin: 15px;
       border-radius: 5px;
+      box-shadow: 1px 1px 2px #0a1f3968;
 
       .signup_icon {
         display: block;
