--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -56,6 +56,8 @@
   height: 40px;
   margin: 15px;
   border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px rgba(10, 31, 57, 0.4078431373);
+          box-shadow: 1px 1px 2px rgba(10, 31, 57, 0.4078431373);
 }
 .login_container form .login_input_container .login_icon {
   display: block;
