--- a/src/Components/LogIn/index.scss
+++ b/src/Components/LogIn/index.scss
@@ -32,6 +32,7 @@
       height: 40px;
       margin: 15px;
       border-radius: 5px;
+      box-shadow: 1px 1px 2px #0a1f3968;
 
       .login_icon {
         display: block;
