--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -4,7 +4,7 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 400px;
+  width: 80%;
   height: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,7 +19,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #E8EEF2;
+  background-color: #e8eef2;
   -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
           box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
 }
@@ -80,7 +80,7 @@
   border-radius: 4px;
   padding: 5px;
   width: 200px;
-  background-color: #FEC601;
+  background-color: #fec601;
   font-size: 2rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -103,5 +103,16 @@
   transition: color 0.2s ease-in;
 }
 .login_container .signup_text .signup_link:hover {
-  color: #6C809A;
+  color: #6c809a;
+}
+
+@media screen and (min-width: 768px) {
+  .login_container {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .login_container {
+    width: 400px;
+  }
 }
