--- a/src/Components/LogIn/index.scss
+++ b/src/Components/LogIn/index.scss
@@ -3,13 +3,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 80%;
   height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #E8EEF2;
+  background-color: #e8eef2;
   box-shadow: 10px -2px 20px 2px #e8eef24c;
 
   h2 {
@@ -56,7 +56,7 @@
       border-radius: 4px;
       padding: 5px;
       width: 200px;
-      background-color: #FEC601;
+      background-color: #fec601;
       font-size: 2rem;
       font-weight: 600;
       text-transform: uppercase;
@@ -79,7 +79,17 @@
       transition: color 0.2s ease-in;
     }
     .signup_link:hover {
-      color: #6C809A;
+      color: #6c809a;
     }
+  }
+}
+@media screen and (min-width:768px) {
+  .login_container {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .login_container {
+    width: 400px;
   }
 }
