--- a/src/Components/SignUp/css/index.css
+++ b/src/Components/SignUp/css/index.css
@@ -4,7 +4,7 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 400px;
+  width: 90%;
   height: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,4 +90,15 @@
 }
 .signup_container form .signup_btn:hover {
   background-color: #f9d44b;
+}
+
+@media screen and (min-width: 768px) {
+  .signup_container {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .signup_container {
+    width: 400px;
+  }
 }
