--- a/src/Components/SignUp/index.scss
+++ b/src/Components/SignUp/index.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 90%;
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -68,4 +68,15 @@
     }
   }
 
+}
+
+@media screen and (min-width:768px) {
+  .signup_container {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .signup_container {
+    width: 400px;
+  }
 }
