--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -3,8 +3,8 @@
 }
 .accordion_container .crypto_container {
   cursor: pointer;
-  width: 60%;
-  height: 70px;
+  width: 90%;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,13 +14,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 20px auto;
+  margin: 10px auto;
   border-radius: 4px;
-  background-color: #E8EEF2;
+  background-color: #e8eef2;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
 .accordion_container .crypto_container .crypto_name {
+  width: auto;
   margin-left: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,30 +34,30 @@
           align-items: center;
 }
 .accordion_container .crypto_container .crypto_name h2 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 .accordion_container .crypto_container .crypto_name p {
-  font-size: 1.8rem;
-  margin-left: 10px;
+  font-size: 1.2rem;
+  margin-left: 5px;
 }
 .accordion_container .crypto_container .crypto_price {
-  width: 20%;
+  width: 35%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-right: 20px;
+  margin-right: 5px;
 }
 .accordion_container .crypto_container .crypto_price p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 .accordion_container .crypto_container:hover {
-  background-color: #FEC601;
+  background-color: #fec601;
   color: #151515;
 }
 .accordion_container .data_container {
@@ -75,7 +76,7 @@
           align-items: center;
   width: 100%;
   height: 100px;
-  color: #E8EEF2;
+  color: #e8eef2;
 }
 .accordion_container .data_container .data_inner_container {
   width: 60%;
@@ -111,4 +112,41 @@
 }
 .accordion_container .data_container .data_inner_container .datas p {
   font-size: 1.5rem;
+}
+
+@media screen and (min-width: 992px) {
+  .accordion_container {
+    width: 100%;
+  }
+  .accordion_container .crypto_container {
+    width: 60%;
+    height: 70px;
+  }
+  .accordion_container .crypto_container .crypto_name h2 {
+    font-size: 2.5rem;
+    margin-left: 10px;
+  }
+  .accordion_container .crypto_container .crypto_name p {
+    font-size: 1.8rem;
+    margin-left: 10px;
+  }
+  .accordion_container .crypto_container .crypto_price {
+    width: 20%;
+    margin-right: 20px;
+  }
+  .accordion_container .crypto_container .crypto_price p {
+    font-size: 2rem;
+  }
+  .data_container {
+    width: 100%;
+    height: 100px;
+  }
+  .data_container .data_inner_container {
+    width: 60%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .data_container .data_inner_container .datas h3 {
+    font-size: 2rem;
+  }
 }
