--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -3,46 +3,47 @@
 
   .crypto_container {
     cursor: pointer;
-    width: 60%;
-    height: 70px;
+    width: 90%;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px auto;
+    margin: 10px auto;
     border-radius: 4px;
-    background-color: #E8EEF2;
+    background-color: #e8eef2;
     transition: all 0.2s ease-in;
 
     .crypto_name {
+      width: auto;
       margin-left: 5px;
       display: flex;
       justify-content: center;
       align-items: center;
 
       h2 {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         text-transform: uppercase;
-        margin-left: 10px;
+        margin-left: 5px;
       }
       p {
-        font-size: 1.8rem;
-        margin-left: 10px;
+        font-size: 1.2rem;
+        margin-left: 5px;
       }
     }
     .crypto_price {
-      width: 20%;
+      width: 35%;
       display: flex;
       justify-content: space-between;
-      margin-right: 20px;
+      margin-right: 5px;
 
       p {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 500;
       }
     }
   }
   .crypto_container:hover {
-    background-color: #FEC601;
+    background-color: #fec601;
     color: #151515;
   }
 
@@ -53,7 +54,7 @@
     align-items: center;
     width: 100%;
     height: 100px;
-    color: #E8EEF2;
+    color: #e8eef2;
 
     .data_inner_container {
       width: 60%;
@@ -76,6 +77,51 @@
         }
         p {
           font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .accordion_container {
+    width: 100%;
+
+    .crypto_container {
+      width: 60%;
+      height: 70px;
+
+      .crypto_name {
+        h2 {
+          font-size: 2.5rem;
+          margin-left: 10px;
+        }
+        p {
+          font-size: 1.8rem;
+          margin-left: 10px;
+        }
+      }
+      .crypto_price {
+        width: 20%;
+        margin-right: 20px;
+        p {
+          font-size: 2rem;
+        }
+      }
+    }
+  }
+  .data_container {
+    width: 100%;
+    height: 100px;
+
+    .data_inner_container {
+      width: 60%;
+      height: 100%;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+
+      .datas {
+        h3 {
+          font-size: 2rem;
         }
       }
     }
