--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -79,10 +79,10 @@
   color: #e8eef2;
 }
 .accordion_container .data_container .data_inner_container {
-  width: 60%;
+  width: 90%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: auto auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -106,12 +106,12 @@
           align-items: center;
 }
 .accordion_container .data_container .data_inner_container .datas h3 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   text-align: center;
   margin-bottom: 10px;
 }
 .accordion_container .data_container .data_inner_container .datas p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 @media screen and (min-width: 992px) {
@@ -148,5 +148,8 @@
   }
   .data_container .data_inner_container .datas h3 {
     font-size: 2rem;
+  }
+  .data_container .data_inner_container .datas p {
+    font-size: 1.5rem;
   }
 }
