--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -57,10 +57,10 @@
     color: #e8eef2;
 
     .data_inner_container {
-      width: 60%;
+      width: 90%;
       height: 100%;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: auto auto;
       justify-content: center;
       align-items: center;
 
@@ -71,12 +71,12 @@
         align-items: center;
 
         h3 {
-          font-size: 2rem;
+          font-size: 1.6rem;
           text-align: center;
           margin-bottom: 10px;
         }
         p {
-          font-size: 1.5rem;
+          font-size: 1.2rem;
         }
       }
     }
@@ -122,6 +122,9 @@
       .datas {
         h3 {
           font-size: 2rem;
+        }
+        p {
+          font-size: 1.5rem;
         }
       }
     }
