--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -114,10 +114,28 @@
   font-size: 1.2rem;
 }
 
-@media screen and (min-width: 992px) {
-  .accordion_container {
-    width: 100%;
+@media screen and (min-width: 768px) {
+  .accordion_container .crypto_container {
+    width: 80%;
+    height: 70px;
   }
+  .accordion_container .crypto_container .crypto_name h2 {
+    font-size: 2rem;
+    margin-left: 10px;
+  }
+  .accordion_container .crypto_container .crypto_name p {
+    font-size: 1.5rem;
+    margin-left: 10px;
+  }
+  .accordion_container .crypto_container .crypto_price {
+    width: 25%;
+    margin-right: 15px;
+  }
+  .accordion_container .crypto_container .crypto_price p {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (min-width: 992px) {
   .accordion_container .crypto_container {
     width: 60%;
     height: 70px;
