--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -83,10 +83,34 @@
   }
 }
 
+@media screen and (min-width: 768px){
+  .accordion_container {
+    .crypto_container {
+      width: 80%;
+      height: 70px;
+      .crypto_name {
+        h2 {
+          font-size: 2rem;
+          margin-left: 10px;
+        }
+        p {
+          font-size: 1.5rem;
+          margin-left: 10px;
+        }
+      }
+      .crypto_price {
+        width: 25%;
+        margin-right: 15px;
+        p {
+          font-size: 1.8rem;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 992px) {
   .accordion_container {
-    width: 100%;
-
     .crypto_container {
       width: 60%;
       height: 70px;
