--- a/src/Components/GlobalData/css/index.css
+++ b/src/Components/GlobalData/css/index.css
@@ -42,7 +42,7 @@
           box-shadow: 5px -2px 10px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .globaldata_container .gdatas h3 {
-  font-size: 2.3rem;
+  font-size: 2rem;
   text-align: center;
   word-wrap: break-word;
   margin: 10px auto;
@@ -52,6 +52,18 @@
   font-weight: 500;
 }
 
+@media screen and (min-width: 768px) {
+  .globaldata_container .gdatas {
+    width: 300px;
+    height: 300px;
+  }
+  .globaldata_container .gdatas h3 {
+    font-size: 2.3rem;
+  }
+  .globaldata_container .gdatas p {
+    font-size: 1.9rem;
+  }
+}
 @media screen and (min-width: 992px) {
   .globaldata_container {
     grid-template-columns: 1fr 1fr 1fr;
@@ -61,11 +73,5 @@
     height: 300px;
     -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
             box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
-  }
-  .globaldata_container .gdatas h3 {
-    font-size: 2rem;
-  }
-  .globaldata_container .gdatas p {
-    font-size: 1.9rem;
   }
 }
