--- a/src/Components/GlobalData/index.scss
+++ b/src/Components/GlobalData/index.scss
@@ -29,7 +29,7 @@
     box-shadow: 5px -2px 10px 2px #e8eef24c;
 
     h3 {
-      font-size: 2.3rem;
+      font-size: 2rem;
       text-align: center;
       word-wrap: break-word;
       margin: 10px auto;
@@ -37,6 +37,21 @@
     p {
       font-size: 1.5rem;
       font-weight: 500;
+    }
+  }
+}
+
+@media screen and (min-width: 768px){
+  .globaldata_container {
+    .gdatas {
+      width: 300px;
+      height: 300px;
+      h3 {
+        font-size: 2.3rem;
+      }
+      p {
+        font-size: 1.9rem;
+      }
     }
   }
 }
@@ -49,13 +64,6 @@
       width: 300px;
       height: 300px;
       box-shadow: 10px -2px 20px 2px #e8eef24c;
-
-      h3 {
-        font-size: 2rem;
-      }
-      p {
-        font-size: 1.9rem;
-      }
     }
   }
 }
