--- a/src/Components/MenuNav/css/index.css
+++ b/src/Components/MenuNav/css/index.css
@@ -15,7 +15,7 @@
 .navbar .logo {
   display: block;
   color: #E8EEF2;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   margin-left: 20px;
 }
@@ -66,7 +66,7 @@
 .navbar .hamburger_icon {
   display: block;
   color: #E8EEF2;
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-right: 20px;
   cursor: pointer;
   -webkit-transition: color 0.2s ease-in;
@@ -76,6 +76,14 @@
   color: #FEC601;
 }
 
+@media screen and (min-width: 768px) {
+  .navbar .logo {
+    font-size: 3rem;
+  }
+  .navbar .hamburger_icon {
+    font-size: 3rem;
+  }
+}
 @media screen and (min-width: 992px) {
   .navbar {
     width: 100%;
