Add title, syle

--- a/src/Components/LogIn/index.scss
+++ b/src/Components/LogIn/index.scss
@@ -1,3 +1,9 @@
+.main_title {
+  color: #E8EEF2;
+  text-align: center;
+  margin: 10px auto;
+  font-size: 4rem;
+}
 .login_container {
   position: absolute;
   top: 50%;
@@ -10,7 +16,7 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: #e8eef2;
-  box-shadow: 10px -2px 20px 2px #e8eef24c;
+  box-shadow: 5px -2px 10px 2px #e8eef24c;
 
   h2 {
     text-align: center;
@@ -84,8 +90,13 @@
   }
 }
 @media screen and (min-width:768px) {
+  .main_title {
+    margin: 20px auto;
+    font-size: 5rem;
+  }
   .login_container {
     width: 60%;
+    box-shadow: 10px -2px 20px 2px #e8eef24c;
   }
 }
 @media screen and (min-width: 992px) {
