--- a/src/Components/LogIn/css/index.css
+++ b/src/Components/LogIn/css/index.css
@@ -1,3 +1,10 @@
+.main_title {
+  color: #E8EEF2;
+  text-align: center;
+  margin: 10px auto;
+  font-size: 4rem;
+}
+
 .login_container {
   position: absolute;
   top: 50%;
@@ -20,8 +27,8 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: #e8eef2;
-  -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
-          box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+  -webkit-box-shadow: 5px -2px 10px 2px rgba(232, 238, 242, 0.2980392157);
+          box-shadow: 5px -2px 10px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .login_container h2 {
   text-align: center;
@@ -107,8 +114,14 @@
 }
 
 @media screen and (min-width: 768px) {
+  .main_title {
+    margin: 20px auto;
+    font-size: 5rem;
+  }
   .login_container {
     width: 60%;
+    -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+            box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
   }
 }
 @media screen and (min-width: 992px) {
